src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>SBQQSC__ActiveContract__c</fullName>
        <formula>IF(OR(AND(Not(SBQQSC__Evergreen__c),StartDate &lt;= TODAY(),EndDate &gt;= TODAY()), SBQQSC__Evergreen__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__AmendmentOpportunityRecordTypeId__c</fullName>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__AmendmentOpportunityStage__c</fullName>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__AmendmentPricebookId__c</fullName>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CompanySignedDate__c</fullName>
        <description>The Date the company signed the Service Contract.</description>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CompanySigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Company who signed the Service Contract.</description>
        <label>Company Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>ServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CustomerSignedDate__c</fullName>
        <description>The Date the customer signed the Service Contract.</description>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CustomerSignedTitle__c</fullName>
        <label>Customer Signed Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__CustomerSigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Customer who signed the Service Contract.</description>
        <label>Customer Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>ServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DefaultRenewalPartners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the contract is evergreen.</description>
        <inlineHelpText>Indicates if the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__ExpirationDate__c</fullName>
        <description>Service Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Service Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQSC__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates this service contract as the master service contract for this account. Upon renewal all service contracts will be rolled into this service contract.</description>
        <inlineHelpText>Designates this service contract as the master service contract for this account. Upon renewal all service contracts will be rolled into this service contract.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OpportunityPricebookId__c</fullName>
        <formula>SBQQSC__Opportunity__r.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Pricebook Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>ServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order where the Service Contract is created from.</description>
        <inlineHelpText>The order where the Service Contract is created from.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>ServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__OwnerExpirationNotice__c</fullName>
        <description>Number of days before expiration to send a notice to the Owner.</description>
        <label>Owner Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQSC__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preserve Bundle Structure Upon Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Quote that generated this service contract.</description>
        <inlineHelpText>Quote that generated this service contract.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>ServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</description>
        <inlineHelpText>Triggers generation of renewal opportunity (no quote) for forecasting purposes.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity generated from this service contract. Null value won&apos;t attempt to set record type.</description>
        <inlineHelpText>Record type of renewal opportunity if different than the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalOpportunityStage__c</fullName>
        <description>Stage of auto generated renewal opportunities.</description>
        <inlineHelpText>Default stage of renewal opportunity generated from this service contract.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this service contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this service contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Contracts (Renewal Opportunity)</relationshipLabel>
        <relationshipName>RenewedServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who should own the renewal opportunity.</description>
        <inlineHelpText>User who should own the renewal opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalServiceContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalPricebookId__c</fullName>
        <description>ID of price book to use when renewing this service contract.</description>
        <inlineHelpText>ID of price book to use when renewing this service contract.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalTerm__c</fullName>
        <description>Term of the renewal, which defaults to the original service contract term.</description>
        <inlineHelpText>Term of the renewal, which defaults to the original service contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQSC__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQSC__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Contract Line Item for the same product into one line on Renewal Quotes and Amendments.</description>
        <inlineHelpText>Select to combine quantities of Contract Line Item for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Contract Line Item Quantities</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>